# plotly-dash-instrument

./: .gitignore  Dockerfile  README.md  compose.yaml  environment.yaml  pyproject.toml  requirements.txt
config/collector/: config.yaml
config/grafana/provisioning/datasources/: datasource.yaml
dash_otel/: __main__.py  app.py
